Build: make helper pip-installable; add CI packaging smoke

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements-dev.txt
+          python -m pip install -e .
 
       - name: Lint (minimal)
         run: ruff check .
+
+      - name: Packaging smoke
+        run: |
+          python -c "import mdeasm, mdeasm_cli; print('import ok')"
+          python -m mdeasm_cli --help >/dev/null
 
       - name: Tests
         run: pytest
 
       - name: Compile
         run: python -m compileall API
-
