--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,4 +33,4 @@ line-length = 100
 
 [tool.ruff.lint]
 # Keep rules minimal to avoid forcing a large style refactor of the upstream script code.
-select = ["E9", "F63", "F7", "F82", "F401"]
+select = ["E9", "F63", "F7", "F82", "F401", "F841"]
